jerry-core/parser/js/new-parser/tests/js/strict-mode/object-literal-same-data.js
/* This test contains strict mode parser tests. */

'use strict'

a = {x:5,//
x:6};
